# cuddly-dollop-ftp

./: CMakeLists.txt  Thread.cpp  client.cpp  client.h  server.cpp  server.h  utility.cpp  utility.h
FTP_Client/: FTP_Client.sln  FTP_Client.vcxproj  FTP_Client.vcxproj.filters
FTP_Server/: FTP_Server.sln  FTP_Server.vcxproj  FTP_Server.vcxproj.filters
